--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">I'm a student</h2>
         <p data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1000">im currently doing my UG degree</p>
         <div class="Buttons">
-          <a href="rest.jpg"><button class="btn" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="1100" >see resume</button></a> 
+          <a href="resume.jpg"><button class="btn" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="1100" >see resume</button></a> 
           <ul class="ul-icons"> 
             <li><a href="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1200"><i class='bx bxl-github'></i></a></li>
             <li><a href="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1300"><i class='bx bxl-twitter'></i></a></li>
